--- a/index.html
+++ b/index.html
@@ -8,87 +8,72 @@
   </head>
   <body>
     <header>
-      <h1 class="heading1">PERSONAL INFORMATION</h1>
-      <span class="heading-underscore"></span>
+      <!--  -->
     </header>
     <main class="main">
-      <form class="personal-information-form" action="">
-        <label class="label-element" for="fullname">
-          Full Name:
-          <input
-            class="input-field1"
-            type="text"
-            id="fullname"
-            name="name"
-            placeholder=""
-          />
-        </label>
+      <form
+        class="personal-information-form"
+        action="/submit_response"
+        method="get"
+        target="_blank"
+      >
+        <fieldset class="personal-information-fieldset">
+          <legend>PERSONAL INFORMATION</legend>
+          <div class="input-elements">
+            <label for="full-name">Full Name:</label>
+            <input class="input-fields" type="text" id="name" />
+          </div>
 
-        <label class="label-element" for="nickname">
-          Nick Name:
-          <input
-            class="input-field1"
-            type="text"
-            id="nickname"
-            name="nick-name"
-            placeholder=""
-          />
-        </label>
+          <div class="input-elements">
+            <label for="nick-name">Nick Name:</label>
+            <input class="input-fields" type="text" id="nick-name" />
+          </div>
 
-        <label class="label-element" for="date-of-birth">
-          Date of Birth:
-          <input
-            class="input-field1 date-of-birth-field"
-            type="date"
-            id="date-of-birth"
-            name="bday"
-          />
-          <br />
-          <span class="dob-input"></span>
-          <span class="dob-input"></span>
-          <span class="slash"></span>
-          <span class="dob-input"></span>
-          <span class="dob-input"></span>
-          <span class="slash"></span>
-          <span class="dob-input"></span>
-          <span class="dob-input"></span>
-        </label>
+          <div class="input-elements">
+            <label for="date">Date of birth:</label>
+            <input class="input-fields" type="number" id="date" />
+          </div>
 
-        <label class="label-element" for="place-of-birth">
-          Place Of Birth:
-          <input
-            class="input-field1"
-            type="text"
-            id="place-of-birth"
-            name="place-of-birth"
-            placeholder=""
-          />
-        </label>
+          <div class="input-elements">
+            <label for="birth-day">Place of birth:</label>
+            <input class="input-fields" type="text" id="birth-day" />
+          </div>
 
-        <fieldset class="input-field1 gender-fieldset">
-          <legend class="gender">
-            Gender:
-            <input class="gender-input" type="radio" id="male" name="gender" />
-            <label class="gender-input-square-box" for="male"></label>
-            <label class="gender-input-label" for="male">Male</label>
+          <div class="input-elements">
+            <label for="email">Email:</label>
+            <input class="input-fields" type="email" id="email" />
+          </div>
 
-            <input
-              class="gender-input"
-              type="radio"
-              id="female"
-              name="gender"
-            />
-            <label class="gender-input-square-box" for="female"></label>
-            <label class="gender-input-label" for="female">Female</label>
-          </legend>
+          <div class="input-elements">
+            <fieldset class="gender-fieldset">
+              <legend class="gender-legend">
+                Gender:
+                <input
+                  class="gender-input"
+                  type="radio"
+                  id="male"
+                  name="gender"
+                />
+                <span class="input-box"></span>
+
+                <label class="gender-input-label" for="male">Male</label>
+
+                <input
+                  class="gender-input"
+                  type="radio"
+                  id="female"
+                  name="gender"
+                />
+                <span class="input-box"></span>
+                <label class="gender-input-label" for="female">Female</label>
+              </legend>
+            </fieldset>
+          </div>
         </fieldset>
-
-        <label class="label-element" for="email">
-          Email:
-          <input class="input-field1" type="email" id="email" name="email" />
-        </label>
       </form>
     </main>
-    <footer></footer>
+    <footer>
+      <!--  -->
+    </footer>
   </body>
 </html>
