--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Information</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -21,27 +21,27 @@
           <legend>PERSONAL INFORMATION</legend>
           <div class="input-elements">
             <label for="full-name">Full Name:</label>
-            <input class="input-fields" type="text" id="name" />
+            <input class="input-fields" type="text" id="full-name">
           </div>
 
           <div class="input-elements">
             <label for="nick-name">Nick Name:</label>
-            <input class="input-fields" type="text" id="nick-name" />
+            <input class="input-fields" type="text" id="nick-name">
           </div>
 
           <div class="input-elements">
             <label for="date">Date of birth:</label>
-            <input class="input-fields" type="number" id="date" />
+            <input class="input-fields" type="number" id="date">
           </div>
 
           <div class="input-elements">
             <label for="birth-day">Place of birth:</label>
-            <input class="input-fields" type="text" id="birth-day" />
+            <input class="input-fields" type="text" id="birth-day">
           </div>
 
           <div class="input-elements">
             <label for="email">Email:</label>
-            <input class="input-fields" type="email" id="email" />
+            <input class="input-fields" type="email" id="email">
           </div>
 
           <div class="input-elements">
@@ -53,7 +53,7 @@
                   type="radio"
                   id="male"
                   name="gender"
-                />
+                >
                 <span class="input-box"></span>
 
                 <label class="gender-input-label" for="male">Male</label>
@@ -63,7 +63,7 @@
                   type="radio"
                   id="female"
                   name="gender"
-                />
+                >
                 <span class="input-box"></span>
                 <label class="gender-input-label" for="female">Female</label>
               </legend>
